# LgRender

./: CMakeLists.txt  LgRender.sln
LgRender/: LgRender.vcxproj  LgRender.vcxproj.filters  error.cpp  geometry.h  lgrender.h  matrix.cpp  matrix.h  transform.h
LgRender/Debug/: vc140.idb
LgRender/Debug/LgRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LgRender.lastbuildstate
core/: diff_geometry.cpp  error.cpp  geometry.cpp  geometry.h  memory.cpp  shape.cpp  shape.h  transform.cpp  types.h
lgrender/core/: diff_geometry.h  error.h  geometry.cpp  geometry.h  memory.cpp  memory.h  primitive.cpp  primitive.h  shape.cpp  shape.h  transform.cpp  transform.h
lgrender/math/: math_utils.h  matrix.cpp  matrix.h
lgrender/shapes/: cylinder.cpp  cylinder.h  disk.cpp  disk.h  sphere.cpp  sphere.h  trianglemesh.cpp  trianglemesh.h
math/: matrix.h  utils.h
shapes/: cylinder.cpp  sphere.cpp  sphere.h  trianglemesh.cpp  trianglemesh.h
